<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    >
    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/location"
        />
    <TextView
        android:id="@+id/local_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location"
        android:textAlignment="center"
        android:textSize="@dimen/location_time"
        />
    <GridLayout
        android:id="@+id/forecast_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/local_time"
        android:columnCount="1"
        android:rowCount="14"
        android:background="@color/tran_b"
        android:padding="@dimen/block_inner_padding"
        >
        <TextView
            android:text="@string/forecast"
            android:textSize="@dimen/forecast"
            android:layout_column="0"
            android:layout_row="0"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_row="1"
            android:background="@drawable/solid_divide_line"
            />
        <GridView
            android:id="@+id/horizon_scroll"
            android:layout_column="0"
            android:layout_row="2"
            >
            <!--<com.giant.jamie.weather.HourlyForecast-->
                <!--android:id="@+id/hourly_forecast"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->

            <!--<GridLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:columnCount="12"-->
                <!--android:rowCount="1"-->
                <!--&gt;-->
                <!--<GridLayout-->
                    <!--android:layout_row="0"-->
                    <!--android:layout_column="0"-->
                    <!--android:columnCount="1"-->
                    <!--android:rowCount="3"-->
                    <!--&gt;-->
                    <!--<TextView-->
                        <!--android:id="@+id/time1"-->
                        <!--android:layout_column="0"-->
                        <!--android:layout_row="0"-->
                        <!--/>-->
                    <!--<ImageView-->
                        <!--android:id="@+id/image1"-->
                        <!--android:layout_column="0"-->
                        <!--android:layout_row="1"-->
                        <!--/>-->
                    <!--<TextView-->
                        <!--android:id="@+id/t1"-->
                        <!--android:layout_column="0"-->
                        <!--android:layout_row="2"-->
                        <!--/>-->
                <!--</GridLayout>-->
            <!--</GridLayout>-->
        </GridView>
        <TextView
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_row="3"
            android:background="@drawable/dotted_divide_line"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/first_day"
            android:layout_column="0"
            android:layout_row="4"
            >
            <TextView
                android:id="@+id/day1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:textSize="@dimen/day_forecast"
                android:layout_weight="2"
                />
            <ImageView
                android:id="@+id/weather_image1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:textAlignment="viewEnd"
                android:layout_weight="5"
                />
            <TextView
                android:id="@+id/ht1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:textSize="@dimen/ht_forecast"
                android:textAlignment="viewEnd"
                android:layout_weight="2"
                />
            <TextView
                android:id="@+id/lt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:textSize="@dimen/lt_forecast"
                android:textColor="@color/lt"
                android:textAlignment="viewEnd"
                android:layout_weight="1"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_row="5"
            android:background="@drawable/dotted_divide_line"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/second_day"
            android:layout_column="0"
            android:layout_row="6"
            >
            <TextView
                android:id="@+id/day2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:textSize="@dimen/day_forecast"
                android:layout_weight="2"
                />
            <ImageView
                android:id="@+id/weather_image2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:textAlignment="viewEnd"
                android:layout_weight="5"
                />
            <TextView
                android:id="@+id/ht2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:textSize="@dimen/ht_forecast"
                android:textAlignment="viewEnd"
                android:layout_weight="2"
                />
            <TextView
                android:id="@+id/lt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:textSize="@dimen/lt_forecast"
                android:textColor="@color/lt"
                android:textAlignment="viewEnd"
                android:layout_weight="1"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_row="7"
            android:background="@drawable/dotted_divide_line"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/third_day"
            android:layout_column="0"
            android:layout_row="8"
            >
            <TextView
                android:id="@+id/day3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:textSize="@dimen/day_forecast"
                android:layout_weight="2"
                />
            <ImageView
                android:id="@+id/weather_image3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:textAlignment="viewEnd"
                android:layout_weight="5"
                />
            <TextView
                android:id="@+id/ht3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:textSize="@dimen/ht_forecast"
                android:textAlignment="viewEnd"
                android:layout_weight="2"
                />
            <TextView
                android:id="@+id/lt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:textSize="@dimen/lt_forecast"
                android:textColor="@color/lt"
                android:textAlignment="viewEnd"
                android:layout_weight="1"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_row="9"
            android:background="@drawable/dotted_divide_line"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/four_day"
            android:layout_column="0"
            android:layout_row="10"
            >
            <TextView
                android:id="@+id/day4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:textSize="@dimen/day_forecast"
                android:layout_weight="2"
                />
            <ImageView
                android:id="@+id/weather_image4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:textAlignment="viewEnd"
                android:layout_weight="5"
                />
            <TextView
                android:id="@+id/ht4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:textSize="@dimen/ht_forecast"
                android:textAlignment="viewEnd"
                android:layout_weight="2"
                />
            <TextView
                android:id="@+id/lt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:textSize="@dimen/lt_forecast"
                android:textColor="@color/lt"
                android:textAlignment="viewEnd"
                android:layout_weight="1"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_row="11"
            android:background="@drawable/dotted_divide_line"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/five_day"
            android:layout_column="0"
            android:layout_row="12"
            >
            <TextView
                android:id="@+id/day5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:textSize="@dimen/day_forecast"
                android:layout_weight="2"
                />
            <ImageView
                android:id="@+id/weather_image5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:layout_weight="5"
                />
            <TextView
                android:id="@+id/ht5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:textSize="@dimen/ht_forecast"
                android:layout_weight="2"
                />
            <TextView
                android:id="@+id/lt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:textSize="@dimen/lt_forecast"
                android:textColor="@color/lt"
                android:layout_weight="1"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_row="13"
            android:background="@drawable/dotted_divide_line"
            />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/forecast_weather"
        android:background="@color/tran_b"
        android:layout_marginTop="@dimen/block_distance"
        android:padding="@dimen/block_inner_padding"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textSize="@dimen/forecast"
            android:textAlignment="viewStart"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/solid_divide_line"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/current_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:src="@mipmap/ic_launcher"
                android:layout_alignParentStart="true"
                />
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:rowCount="7"
                android:columnCount="2"
                >
                <TextView
                    android:layout_column="0"
                    android:layout_row="0"
                    android:text="@string/at"
                    android:textSize="@dimen/current_observation_title"
                    />
                <TextView
                    android:id="@+id/ap"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:text="@string/default_value"
                    android:textSize="@dimen/current_observation_text"
                    android:layout_gravity="end"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_row="1"
                    android:background="@drawable/dotted_divide_line"
                    />
                <TextView
                    android:layout_column="0"
                    android:layout_row="2"
                    android:text="@string/humidity"
                    android:textSize="@dimen/current_observation_title"
                    />
                <TextView
                    android:id="@+id/humidity"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:text="@string/default_value"
                    android:textSize="@dimen/current_observation_text"
                    android:layout_gravity="end"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_row="3"
                    android:background="@drawable/dotted_divide_line"
                    />
                <TextView
                    android:layout_column="0"
                    android:layout_row="4"
                    android:text="@string/visibility"
                    android:textSize="@dimen/current_observation_title"
                    />
                <TextView
                    android:id="@+id/visibility"
                    android:layout_column="1"
                    android:layout_row="4"
                    android:text="@string/default_value"
                    android:textSize="@dimen/current_observation_text"
                    android:layout_gravity="end"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_row="5"
                    android:background="@drawable/dotted_divide_line"
                    />
                <TextView
                    android:layout_column="0"
                    android:layout_row="6"
                    android:text="@string/ultraviolet"
                    android:textSize="@dimen/current_observation_title"
                    />
                <TextView
                    android:id="@+id/uv"
                    android:layout_column="1"
                    android:layout_row="6"
                    android:text="@string/default_value"
                    android:textSize="@dimen/current_observation_text"
                    android:layout_gravity="end"
                    />
            </GridLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dotted_divide_line"
            />
    </LinearLayout>

</RelativeLayout>